[package]
name = "rust_contracts"
version = "0.1.0"
authors = [""]
edition = "2018"
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
libloading = "0.5"
lazy_static = "1.3.0"
proc-macro2 = "0.4.30"
rust_contracts_common = { path = "common" }
