[package]
name = "rust-contracts-parser"
version = "0.1.0"
authors = []
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
uuid = { version = "0.7", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
syn-serde = { version = "0.2", features = ["json"] }

[dependencies.syn]
version = "1.0"
features = ["full", "visit", "visit-mut", "fold", "extra-traits"]